# ci-cd-advanced

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml
data/: test.csv  train.csv  validate.csv
scripts/: run_ci_pipeline.py
src/revolutionary_mlops/: __main__.py  metrics.py  ml.py  utils.py
src/revolutionary_mlops/pipelines/: train_pipeline.py  validate_pipeline.py
tests/: test_metrics.py  test_ml.py  test_pipelines.py  test_utils.py
